c/examples/writing-a-c-compiler-tests/tests/chapter_7/valid/empty_blocks.c
int main(void) {
    int ten = 10;
    {}
    int twenty = 10 * 2;
    {{}}
    return ten + twenty;
}