c/examples/writing-a-c-compiler-tests/tests/chapter_7/invalid_parse/missing_brace.c
int main(void) {
    if(0){
        return 1;
    return 2;
}